Core: Prevent additional space at bottom of fieldsets on Firefox. Fixes #6319.

--- a/css/structure/jquery.mobile.core.css
+++ b/css/structure/jquery.mobile.core.css
@@ -19,6 +19,7 @@
 @-moz-document url-prefix() {
 	.ui-mobile fieldset {
 		display: table-column;
+		vertical-align: middle;
 	}
 }
 
